<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="of">of</string>
    <string name="test_your_knowledge">Test Your Knowledge</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="successTextView">You have successfully completed the quiz</string>
    <string name="points">0/10</string>
    <string name="question">Which letter or number does the following sign represent?</string>
    <string name="next">Next</string>
    <string name="result">Correct!</string>
    <string name="timer">10s</string>
    <string name="pointsTitle">Points: </string>
    <string name="personal_best">Personal Best: </string>
    <string name="success">You have successfully completed the quiz!</string>
</resources>