<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/primary_color"
    tools:context=".QuizActivity"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:srcCompat="@drawable/timer"/>

            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tvTimer"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:text="@string/timer"
                 android:textSize="23sp"
                 android:textColor="@color/white" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:srcCompat="@drawable/star"/>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPoints"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/points"
                android:textColor="@color/white"
                android:textSize="23sp"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="0dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/question"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:background="@color/primary_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:id="@+id/ivShowImage"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/a"
                android:background="@color/white"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="answerSelected"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@drawable/round_back_white_stroke2_10"
                app:backgroundTint="@null"
                android:layout_margin="8dp"
                android:contentDescription="Answer option 1">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="answerSelected"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@drawable/round_back_white_stroke2_10"
                app:backgroundTint="@null"
                android:layout_margin="8dp"
                android:contentDescription="Answer option 2">
            </androidx.appcompat.widget.AppCompatButton>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="answerSelected"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@drawable/round_back_white_stroke2_10"
                app:backgroundTint="@null"
                android:layout_margin="8dp"
                android:contentDescription="Answer option 3">
            </androidx.appcompat.widget.AppCompatButton>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="answerSelected"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@drawable/round_back_white_stroke2_10"
                app:backgroundTint="@null"
                android:layout_margin="8dp"
                android:contentDescription="Answer option 4">
            </androidx.appcompat.widget.AppCompatButton>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvResult"
                android:layout_margin="15dp"
                android:gravity="center"
                android:textSize="28sp"
                android:textColor="@color/white"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_green20"
                android:minHeight="48dp"
                android:onClick="nextQuestion"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="@null">

            </androidx.appcompat.widget.AppCompatButton>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
